# OS-kernel-

./: CMakeLists.txt  README.md  checking.cpp  metrics.csv  test_core_systems.cpp
.kiro/specs/mini-os-kernel-simulator/: design.md  requirements.md  tasks.md
__cmake_systeminformation/: CMakeCache.txt
build_test_check/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_test_check/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_test_check/tests/: CTestTestfile.cmake  Makefile  MiniOSPropertyTests-b12d07c_include.cmake  cmake_install.cmake
build_test_check/tests/MiniOSPropertyTests_autogen/: deps
include/: ConfigurationManager.h  Dashboard.h  ExportController.h  GUIController.h  GanttChartWidget.h  InputValidator.h  MainWindow.h  MemoryManager.h  MemoryTypes.h  MemoryViewWidget.h  MetricsCollector.h  MetricsWidget.h  ProcessManager.h  ProcessState.h  ProcessTableWidget.h  Scheduler.h  SimulationConfig.h  SimulationController.h  SyncManager.h
src/: main.cpp
src/controllers/: .gitkeep  ConfigurationManager.cpp  ExportController.cpp  GUIController.cpp  SimulationController.cpp
src/gui/: .gitkeep  Dashboard.cpp  GanttChartWidget.cpp  MainWindow.cpp  MemoryViewWidget.cpp  MetricsWidget.cpp  ProcessTableWidget.cpp
src/kernel/: .gitkeep  MemoryManager.cpp  MetricsCollector.cpp  ProcessManager.cpp  Scheduler.cpp  SyncManager.cpp
src/models/: .gitkeep  MemoryPage.cpp  Process.cpp  ProcessState.cpp  SyncPrimitive.cpp
src/utils/: .gitkeep  InputValidator.cpp
tests/: CMakeLists.txt  test_framework_setup.cpp  test_integration.cpp  test_process_management.cpp  test_utils.h
